[gd_scene load_steps=13 format=3 uid="uid://cvwfb3sticatc"]

[ext_resource type="Script" uid="uid://byrxdduu0c1jr" path="res://scripts/disparo.gd" id="1_2dxwe"]
[ext_resource type="Texture2D" uid="uid://1ea0m8tiu1y7" path="res://assets/disparo/disparo.png" id="1_nen8t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2dxwe"]
atlas = ExtResource("1_nen8t")
region = Rect2(0, 0, 60, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwnc6"]
atlas = ExtResource("1_nen8t")
region = Rect2(60, 0, 60, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_odqgq"]
atlas = ExtResource("1_nen8t")
region = Rect2(120, 0, 60, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss8j7"]
atlas = ExtResource("1_nen8t")
region = Rect2(180, 0, 60, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gxks"]
atlas = ExtResource("1_nen8t")
region = Rect2(240, 0, 60, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8gpm"]
atlas = ExtResource("1_nen8t")
region = Rect2(300, 0, 60, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdiqn"]
atlas = ExtResource("1_nen8t")
region = Rect2(360, 0, 60, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_otsry"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dxwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwnc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odqgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss8j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gxks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8gpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdiqn")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qyhim"]
radius = 5.0
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sdooi"]
radius = 5.0
height = 16.0

[node name="Disparo" type="RigidBody2D"]
collision_layer = 5
collision_mask = 5
gravity_scale = 0.0
lock_rotation = true
linear_velocity = Vector2(1500, 0)
script = ExtResource("1_2dxwe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_otsry")
frame_progress = 0.589267

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qyhim")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
self_modulate = Color(0.18, 1, 0.357667, 1)
position = Vector2(24, 0)
shape = SubResource("CapsuleShape2D_sdooi")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9, 0)
scale = Vector2(0.95, 1)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
